--- a/internship.html
+++ b/internship.html
@@ -93,11 +93,11 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/retirement-actuarial-internship-summer-2020-12021'>Retirement Actuarial Internship (Summer 2020) - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/retirement-actuarial-internship-summer-2020-12021'>Retirement Actuarial Internship (Summer 2020) - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409294/fire-investigative-intern/?TrackID=97736'>Fire Investigative Intern job with Travelers Insurance | 6409294</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6409294/fire-investigative-intern/?TrackID=97736'>Fire Investigative Intern job with Travelers Insurance | 6409294</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -157,7 +157,7 @@
 <p><span class="badge badge-light">Carmel, Indiana  Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698427064-threat-intelligence-analyst-internships-summer-2020'>FireEye, Inc. Threat Intelligence Analyst Internships - Summer 2020 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698427064-threat-intelligence-analyst-internships-summer-2020'>FireEye, Inc. Threat Intelligence Analyst Internships - Summer 2020 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -181,7 +181,7 @@
 <p><span class="badge badge-light">Washington, District Of Columbia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/apco/job/oY4obfwl'>APCO Worldwide Careers - Intern, Crisis Management - Spring 2020</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/apco/job/oY4obfwl'>APCO Worldwide Careers - Intern, Crisis Management - Spring 2020</a></h5> 
 <p><span class="badge badge-light">Washington, District Of Columbia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -294,7 +294,7 @@ Full timeCOE-HOU-041219. Posted 11 days ago?...</p>
 all aspects of iland's cloud compute systems, including capacity planning, cluster
 ?...</p>
 <hr/>
-<h5><a href='https://sterblue.recruitee.com/o/business-developer-intern'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sterblue.recruitee.com/o/business-developer-intern'>
       Business developer Intern - Sterblue
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -344,7 +344,7 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <p><span class="badge badge-light">Illinois, Chicago</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BainumFamilyFoundation/743999697894659-part-time-food-security-initiative-interns-spring-2020-'>Bainum Family Foundation Part-time Food Security Initiative Interns (Spring 2020) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BainumFamilyFoundation/743999697894659-part-time-food-security-initiative-interns-spring-2020-'>Bainum Family Foundation Part-time Food Security Initiative Interns (Spring 2020) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bethesda, MDBethesda, Maryland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -388,7 +388,7 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <p><span class="badge badge-light">Boston, MA United States</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://degustabox.recruitee.com/o/market-research-internship-spanish-market-2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://degustabox.recruitee.com/o/market-research-internship-spanish-market-2'>
       Market Research Internship - Spanish Market - Degusta Box
     </a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona</span></p>
@@ -410,7 +410,7 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999698358587-videographer-internship'>Bynder VIDEOGRAPHER - Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999698358587-videographer-internship'>Bynder VIDEOGRAPHER - Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -430,7 +430,7 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
