--- a/internship.html
+++ b/internship.html
@@ -41,8 +41,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://colorfy.join.com/jobs/468860-quality-assurance-intern-f-m'>Job @ colorfy (Berlin): Quality Assurance Intern (... | JOIN</a></h5> 
+<h5><a href='https://jobs.lever.co/zoox/c6b32475-c77e-4fe3-b026-8a20df1a8b02'>Zoox - Perception Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698449818--graduation-internship-creating-omneo-audio-connections'>Bosch Group (Graduation) Internship - Creating OMNEO audio connections | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://colorfy.join.com/jobs/468860-quality-assurance-intern-f-m'>Job @ colorfy (Berlin): Quality Assurance Intern (... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Leidos1/743999698444733-intern-software-developer'>Leidos Intern Software Developer | SmartRecruiters</a></h5> 
@@ -255,7 +263,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999698162344-talent-acquisition-intern-h-f'>Sia Partners Talent Acquisition Intern H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999698162344-talent-acquisition-intern-h-f'>Sia Partners Talent Acquisition Intern H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -344,7 +352,7 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <p><span class="badge badge-light">Madrid Madrid</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://myelincommunicationsdbamerge.applytojob.com/apply/l0hRQA768W/Content-Marketing-Associate-Winter-Internship'>Content Marketing Associate (Winter Internship) - Merge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://myelincommunicationsdbamerge.applytojob.com/apply/l0hRQA768W/Content-Marketing-Associate-Winter-Internship'>Content Marketing Associate (Winter Internship) - Merge - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -396,7 +404,7 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698367874-sales-and-business-support-intern'>Bosch Group Sales and Business Support Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698367874-sales-and-business-support-intern'>Bosch Group Sales and Business Support Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -445,14 +453,6 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999698356826-intern-in-group-financial-reporting-team'>Eurofins Intern in Group Financial Reporting Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698356459-front-end-developer-content-team-internship-'>Deezer Front End Developer - Content Team (Internship) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
-<p><span class="badge badge-light">Austin, Texas</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
