--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451921-pt-intern-sales-support-sop-'>Bosch Group PT Intern - Sales Support (SOP) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451447-internship-product-management-video'>Bosch Group Internship Product Management Video | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/gusto/jobs/593558'>Job Application for In-House Legal Intern, Health Benefits at Gusto</a></h5> 
+<p><span class="badge badge-light">San Francisco</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://itron.referrals.selectminds.com/jobs/front-end-software-engineer-intern-3015'>Front-end Software Engineer Intern - Itron Careers</a></h5> 
+<p><span class="badge badge-light">Budapest</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://economictimes.indiatimes.com/jobs/faculty-of-management-studies-delhi-secures-100-summer-internship-placements/articleshow/71817851.cms'>Faculty of Management Studies secures 100% summer internship placements - The Economic Times</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -48,13 +64,13 @@
 <h5><a href='https://fillingpieces.recruitee.com/o/art-direction-intern-1'>
       Art Direction Intern - Filling Pieces
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://fillingpieces.recruitee.com/o/online-marketing-intern-amsterdam'>
       Online Marketing Intern - Filling Pieces
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
@@ -62,15 +78,15 @@
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/samsungssi/job/oI6sbfwb'>Samsung Semiconductor, Inc. Careers - Memory Architecture Research Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/samsungssi/job/ojlobfwX'>Samsung Semiconductor, Inc. Careers - Enterprise SSD Test Engineer Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/samsungssi/job/oylobfwc'>Samsung Semiconductor, Inc. Careers - Enterprise SSD System Engineer Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/splunk/job/otQmbfwA'>Splunk Careers - Blockchain Product Management Intern</a></h5> 
@@ -85,7 +101,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/468860-quality-assurance-intern-f-m'>Job @ colorfy (Berlin): Quality Assurance Intern (... | JOIN</a></h5> 
+<h5><a href='https://colorfy.join.com/jobs/468860-quality-assurance-intern-f-m'>Job @ colorfy (Berlin): Quality Assurance Intern (... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -265,7 +281,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/plotly/jobs/4498246002'>Job Application for Intern Talent Pool at Plotly</a></h5> 
+<h5><a href='https://boards.greenhouse.io/plotly/jobs/4498246002'>Job Application for Intern Talent Pool at Plotly</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -364,7 +380,7 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/falcon/cf2ff3a3-c34d-44be-9a50-1b9fd24b2e89'>Falcon.io - R&D Internship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/cf2ff3a3-c34d-44be-9a50-1b9fd24b2e89'>Falcon.io - R&D Internship</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -432,30 +448,12 @@ all aspects of iland's cloud compute systems, including capacity planning, clust
 <p><span class="badge badge-light">Oegstgeest, Netherlands</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698371198-internship-global-information-management'>Avery Dennison Internship Global Information Management | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698371198-internship-global-information-management'>Avery Dennison Internship Global Information Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oegstgeest, Netherlands</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1832383'>Job Application for Software Engineer - Summer Intern 2020 at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1832383'>Job Application for Software Engineer - Summer Intern 2020 at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698367874-sales-and-business-support-intern'>Bosch Group Sales and Business Support Intern | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Skechers1/743999698367686-intern-tirocinio-full-time-castel-guelfo-the-style-outlet'>Skechers Intern - Tirocinio ( Full Time) - Castel Guelfo the Style Outlet | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Italy</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://performancearchitects.com/jobs/marketing-and-sales-intern-boston-ma-new-england-region-united-states/'>Marketing and Sales Intern (Boston, MA ? New England Region, United States) | Performance Architects</a></h5> 
-<p><span class="badge badge-light">Boston, MA United States</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://degustabox.recruitee.com/o/market-research-internship-spanish-market-2'>
-      Market Research Internship - Spanish Market - Degusta Box
-    </a></h5> 
-<p><span class="badge badge-light">Barcelona, Spain  Barcelona</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
